@@ -8,7 +8,8 @@
     "license": "MIT https://opensource.org/licenses/MIT",
     "factorio_version": "1.1",
     "dependencies": [
-        "base >= 1.0.0"
+        "base >= 1.0.0",
+        "? statsgui >= 1.1.0"
     ],
     "description": "Takes screenshots of your base at specified intervals."
 }
