@@ -92,3 +92,9 @@ signal-target-north-west=North-west corner of the snapshot target
 signal-target-north-east=North-east corner of the snapshot target
 signal-target-south-east=South-east corner of the snapshot target
 signal-target-south-west=South-west corner of the snapshot target
+
+[stats]
+all-paused=All cameras paused
+disabled=Disabled
+transition=Transitioning
+recording=Recording
